integrated tmdb movie db

--- a/.env.development
+++ b/.env.development
@@ -4,3 +4,5 @@ VITE_APP_PROJECT_ID="anshik-netflix-clone"
 VITE_APP_STORAGE_BUCKET="anshik-netflix-clone.appspot.com"
 VITE_APP_MESSAGING_SENDER_ID="666328576213"
 VITE_APP_APP_ID="1:666328576213:web:46ec80cabf89c14f8c725c"
+VITE_APP_MOVIE_DB_KEY="77fe1bd5375b26847e90989b30479f0e"
+VITE_APP_MOVIE_DB_BASE_URL="https://api.themoviedb.org/3"
